@@ -170,7 +170,6 @@ Test::Pod::No404s = 0
 Test::Version = 0
 Test::Mojibake = 0
 ; except this one, which is not added by a plugin (yet)
-Test::CleanNamespaces = 0
 
 [Prereqs / author_tests]
 -phase = develop
@@ -191,6 +190,8 @@ file = share/profiles/github/profile.ini
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
+
+[Test::CleanNamespaces]
 
 [@Author::ETHER]
 ; FIXME: Module.pm in profiles/ has no version, does not have parsable pod
